Indent 2 spaces and format

--- a/recipies/spaghetti_carbonara.html
+++ b/recipies/spaghetti_carbonara.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spaghetti Carbonara</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spaghetti Carbonara</title>
 </head>
+
 <body>
-    <h1>Spaghetti Carbonara</h1>
-    <h2><a href="../index.html">Home</a></h2>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F2434057.jpg&w=596&h=596&c=sc&poi=face&q=60">
+  <h1>Spaghetti Carbonara</h1>
+  <h2><a href="../index.html">Home</a></h2>
+  <img
+    src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F2434057.jpg&w=596&h=596&c=sc&poi=face&q=60">
 </body>
+
 </html>
